[package]
name = "timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hex-literal = "0.3.4"
sha2 = "0.9.8"
ecdsa = "0.13.0"
p256 = "0.9.0"
rand_core = { version = "0.6.3", features = ["getrandom"] }